# SDL2Template

./: .gitignore  CMakeLists.txt
src/: main.cpp
